==> speeduino/speeduino/speeduino/src/STM32SD/bsp_sd.c <==
#include "bsp_sd.h"
#include "interrupt.h"
#include "PeripheralPins.h"
#include "stm32yyxx_ll_gpio.h"
#define SD_INSTANCE              SDMMC1
#define SD_CLK_ENABLE            __HAL_RCC_SDMMC1_CLK_ENABLE
#define SD_CLK_DISABLE           __HAL_RCC_SDMMC1_CLK_DISABLE
#define SD_CLK2_ENABLE            __HAL_RCC_SDMMC2_CLK_ENABLE
#define SD_CLK2_DISABLE           __HAL_RCC_SDMMC2_CLK_DISABLE
#define SD_CLK_EDGE              SDMMC_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS            SDMMC_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE          SDMMC_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B           SDMMC_BUS_WIDE_1B
#define SD_BUS_WIDE_4B           SDMMC_BUS_WIDE_4B
#define SD_BUS_WIDE_8B           SDMMC_BUS_WIDE_8B
#define SD_HW_FLOW_CTRL_ENABLE   SDMMC_HARDWARE_FLOW_CONTROL_ENABLE
#define SD_HW_FLOW_CTRL_DISABLE  SDMMC_HARDWARE_FLOW_CONTROL_DISABLE
#define SD_CLK_DIV               1
#define SD_CLK_DIV               SDMMC_TRANSFER_CLK_DIV
#define SD_TRANSCEIVER_ENABLE    SDMMC_TRANSCEIVER_ENABLE
#define SD_TRANSCEIVER_DISABLE   SDMMC_TRANSCEIVER_DISABLE
#define SD_INSTANCE              SDIO
#define SD_CLK_ENABLE            __HAL_RCC_SDIO_CLK_ENABLE
#define SD_CLK_DISABLE           __HAL_RCC_SDIO_CLK_DISABLE
#define SD_CLK_EDGE              SDIO_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS            SDIO_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE          SDIO_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B           SDIO_BUS_WIDE_1B

uint8_t BSP_SD_Init(void)
{
  uint8_t sd_state = MSD_OK;

  /* uSD device interface configuration */
  uSdHandle.Instance = SD_INSTANCE;

  uSdHandle.Init.ClockEdge           = SD_CLK_EDGE;
#if !defined(STM32L4xx) && !defined(STM32H7xx)
  uSdHandle.Init.ClockBypass         = SD_CLK_BYPASS;
#endif
  uSdHandle.Init.ClockPowerSave      = SD_CLK_PWR_SAVE;
  uSdHandle.Init.BusWide             = SD_BUS_WIDE_1B;
  uSdHandle.Init.HardwareFlowControl = SD_HW_FLOW_CTRL;
  uSdHandle.Init.ClockDiv            = SD_CLK_DIV;
#ifdef SDMMC_TRANSCEIVER_ENABLE
  uSdHandle.Init.Transceiver = SD_TRANSCEIVER_MODE;
  if (SD_TRANSCEIVER_MODE == SD_TRANSCEIVER_ENABLE) {

    BSP_SD_Transceiver_MspInit(&uSdHandle, NULL);
  }
#endif

  if (SD_detect_ll_gpio_pin != LL_GPIO_PIN_ALL) {
    /* Msp SD Detect pin initialization */
    BSP_SD_Detect_MspInit(&uSdHandle, NULL);
    if (BSP_SD_IsDetected() != SD_PRESENT) { /* Check if SD card is present */
      return MSD_ERROR_SD_NOT_PRESENT;
    }
  }

  /* Msp SD initialization */
  BSP_SD_MspInit(&uSdHandle, NULL);

  /* HAL SD initialization */
#ifndef STM32L1xx
  if (HAL_SD_Init(&uSdHandle) != SD_OK)
#else /* STM32L1xx */
  if (HAL_SD_Init(&uSdHandle, &uSdCardInfo) != SD_OK)
#endif
  {
    sd_state = MSD_ERROR;
  }

  /* Configure SD Bus width */
  if (sd_state == MSD_OK) {
    /* Enable wide operation */
    if (HAL_SD_WideBusOperation_Config(&uSdHandle, SD_BUS_WIDE) != SD_OK) {
      sd_state = MSD_ERROR;
    } else {
      sd_state = MSD_OK;
    }
  }
  return  sd_state;
}

__weak void BSP_SD_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(Params);

  /* Configure SD GPIOs */
  const PinMap *map = PinMap_SD;
  while (map->pin != NC) {
    pin_function(map->pin, map->function);
    map++;
  }

  /* Enable SD clock */
#if defined(SDMMC1) && defined(SDMMC2)
  if (hsd->Instance == SDMMC1) {
    SD_CLK_ENABLE();
  } else {
    SD_CLK2_ENABLE();
  }
#else
  UNUSED(hsd);
  SD_CLK_ENABLE();
#endif
}

__weak void BSP_SD_MspDeInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(Params);

  /* DeInit GPIO pins can be done in the application
     (by surcharging this __weak function) */

  /* Disable SD clock */
#if defined(SDMMC1) && defined(SDMMC2)
  if (hsd->Instance == SDMMC1) {
    SD_CLK_DISABLE();
  } else {
    SD_CLK2_DISABLE();
  }
#else
  UNUSED(hsd);
  SD_CLK_DISABLE();
#endif
}

void BSP_SD_GetCardInfo(HAL_SD_CardInfoTypeDef *CardInfo)
{
  /* Get SD card Information */
  HAL_SD_Get_CardInfo(&uSdHandle, CardInfo);
}
